<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="14dp"
        android:paddingVertical="8dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/img_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TSBodyHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resma_adi_nugroho" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TSDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/semarang_indonesia" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@color/transparent"
            android:contentDescription="@string/more"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/img_placeholder"
        android:scaleType="centerCrop"
        android:contentDescription="@string/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="12dp"
        android:paddingHorizontal="4dp"
        >

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/transparent"
            android:contentDescription="@string/more"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_love"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/more"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_comment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:background="@color/transparent"
            android:contentDescription="@string/more"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/more" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_description"
        style="@style/TSDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_900"
        android:text="@string/placeholder"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="16dp"
        android:maxLines="3"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/tv_date"
        style="@style/TSDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="16dp"
        />


</LinearLayout>