<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundPrimary"
    tools:context=".ui.activities.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_placeholder"
            android:transitionName="image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/img_logo"
                android:transitionName="profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circleImageView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TSBodyHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:transitionName="name"
                    android:text="@string/resma_adi_nugroho" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TSDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:transitionName="location"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp"
                    android:text="@string/semarang_indonesia" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@color/transparent"
                android:contentDescription="@string/more"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_more"
                android:transitionName="more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            style="@style/TSDescription"
            android:transitionName="description"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            style="@style/TSDescription"
            android:transitionName="date"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>